# tilix

./: .editorconfig  .gitignore  .travis.yml  CREDITS.md  GTKD-TO-GID-NOTES.md  Makefile.am  NEWS  README.md  RELEASE.md  autogen.sh  configure.ac  dscanner.ini  dub.json  dub.selections.json  dub.userprefs  extract-strings.sh  install.sh  meson.build  meson_post_install.py  uninstall.sh
.github/ci/: Dockerfile-debian-bookworm  Dockerfile-debian-stable  Dockerfile-debian-testing  Dockerfile-ubuntu-jammy  Dockerfile-ubuntu-noble  install-deps-deb.sh  make-install-deps-extern.sh  run-build.sh  run-tests.sh
.github/workflows/: build-test.yml
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/data/: com.gexperts.Tilix.appdata.xml  com.gexperts.Tilix.desktop
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev  dtest
data/: meson.build
data/appdata/: Makefile.am  com.gexperts.Terminix.appdata.xml.in  com.gexperts.Tilix.appdata.xml.in
data/dbus/: com.gexperts.Terminix.service  com.gexperts.Tilix.service  com.gexperts.Tilix.service.in  meson.build
data/gsettings/: com.gexperts.Terminix.gschema.xml  com.gexperts.Tilix.gschema.xml  gschemas.compiled  reset.sh
data/icons/: LICENSE  Makefile.am  meson.build
data/man/: Makefile.am  meson.build  terminix  tilix
data/man/po/: ca.man.po  cs.man.po  de.man.po  en_GB.man.po  eo.man.po  es.man.po  et.man.po  fr.man.po  he.man.po  hi.man.po  hr.man.po  is.man.po  it.man.po  ko.man.po  nb_NO.man.po  nl.man.po  oc.man.po  pl.man.po  pt.man.po  pt_BR.man.po  pt_PT.man.po  ro.man.po  ru.man.po  sr.man.po  sv.man.po  ta.man.po  terminix.man.pot  tilix.1.man.pot  tilix.man.pot  tr.man.po  uk.man.po  zh_Hans.man.po  zh_Hant.man.po
data/metainfo/: com.gexperts.Tilix.appdata.xml.in
data/nautilus/: open-terminix.py  open-tilix.py
data/pkg/: createReleaseArchive.sh
data/pkg/arch/: PKGBUILD  terminix.install
data/pkg/archive/: createReleaseArchive.sh
data/pkg/desktop/: Makefile.am  com.gexperts.Terminix.desktop  com.gexperts.Terminix.desktop.in  com.gexperts.Tilix.desktop.in  terminix.desktop
data/pkg/flatpak/: build.sh  clean.sh  metadata  run.sh
data/resources/: Makefile.am  generate-symbolic.sh  terminix.gresource.xml  tilix.gresource.xml
data/resources/css/: terminix.Adwaita.scrollbar.css  terminix.Ambiance.css  terminix.Ambiance.scrollbar.css  terminix.Arc-Darker.scrollbar.css  terminix.Lavender.scrollbar.css  terminix.Radiance.css  terminix.Radiance.scrollbar.css  terminix.adwaita.css  terminix.base.css  terminix.base.scrollbar.css  tilix.Adapta-Nokto-Eta.css  tilix.Ambiance.css  tilix.Radiance.css  tilix.Radiance.scrollbar.css  tilix.base.css  tilix.base.theme.css  tilix.base320.css
data/resources/icons/: readme.txt
data/resources/ui/: shortcuts.ui
data/schemes/: Dracular.json  PowerShell.json  base16-twilight-dark.json  fedora-gnome.json  github-dark.json  linux.json  material.json  monokai.json  orchis.json  solarized-dark.json  solarized-light.json  tango.json  yaru.json
data/scripts/: install-man-pages.sh  terminix_int.sh  tilix_int.sh
experimental/flatpak/: 0001-Enable-flatpak.patch  README.md  build.sh  clean.sh  com.gexperts.Tilix.json  com.gexperts.Tilix.yaml  disable-ldc-completions.patch  dmd-configure  dmd.conf  druntime-configure  dub-configure  gtkd3-pkgconfig.patch  run.sh  stemmer-dynlib.patch  tilix-flatpak-toolbox.c  vte291-command-notify-scroll-speed.patch  vte291-exceptions-gcc811.patch
experimental/meson/: README.md  meson.build
experimental/meson/data/icons/: meson.build
experimental/meson/po/: meson.build
experimental/source/: x11.d
experimental/vte/: README.md  alternate-screen.patch  disable-bg-draw.patch
experimental/vte/0.52/: alternate-screen.patch
experimental/vte/0.54/: alternate-screen.patch
po/: LINGUAS  Makevars  POTFILES.in  ak.po  ar.po  ar_MA.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  lt.po  meson.build  mr.po  nb_NO.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.mo  (+14 more)
schemas/: com.gexperts.Tilix.gschema.xml  gschemas.compiled
snap/: snapcraft.yaml
source/: app.d
source/gx/glib/: simplexml.d
source/gx/gtk/: actions.d  cairo.d  clipboard.d  color.d  dialog.d  eventsignals.d  keys.d  resource.d  settings.d  tablabel.d  threads.d  types.d  util.d  vte.d  x11.d
source/gx/i18n/: l10n.d
source/gx/terminix/: application.d  appwindow.d  closedialog.d  cmdparams.d  colorschemes.d  common.d  constants.d  customtitle.d  encoding.d  prefdialog.d  preferences.d  prefwindow.d  profileeditor.d  profilewindow.d  session.d  sessionswitcher.d  shortcuts.d  sidebar.d  titleeditor.d
source/gx/terminix/bookmark/: bmchooser.d  bmeditor.d  bmtreeview.d  manager.d
source/gx/terminix/prefeditor/: bookmarkeditor.d  prefdialog.d  profileeditor.d  titleeditor.d
source/gx/terminix/terminal/: actions.d  advpaste.d  bmchooser.d  exvte.d  layout.d  pane.d  password.d  regex.d  search.d  terminal.d  util.d  vtenotification.d
source/gx/tilix/: application.d  appwindow.d  closedialog.d  cmdparams.d  colorschemes.d  common.d  constants.d  constants.d.in  customtitle.d  encoding.d  preferences.d  session.d  sessionswitcher.d  shortcuts.d  sidebar.d
source/gx/tilix/bookmark/: bmchooser.d  bmeditor.d  bmtreeview.d  manager.d
source/gx/tilix/prefeditor/: advdialog.d  bookmarkeditor.d  common.d  prefdialog.d  profileeditor.d  titleeditor.d
source/gx/tilix/terminal/: actions.d  activeprocess.d  advpaste.d  exvte.d  layout.d  monitor.d  password.d  regex.d  search.d  terminal.d  util.d
source/gx/util/: array.d  path.d  signals.d  singleton.d  string.d
source/secret/: Collection.d  Item.d  Prompt.d  Schema.d  SchemaAttribute.d  Secret.d  Service.d  Value.d
source/secretc/: secret.d  secrettypes.d
source/x11/: README.md  X.d  Xlib.d
